--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="hero">
         <div class="container align-center">
           <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-        <button class="button" type="button">
+        <button class="button" type="button" data-modal-open>
           Заказать услугу
         </button>
         </div>
@@ -347,5 +347,13 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-button" type="button" data-modal-close><svg width="18px" height="18px">
+          <use href="./images/sprite.svg#icon-close"></use>
+        </svg></button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
