--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
-    <link rel="stylesheet" href="./css/styles.css" />
+       <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
@@ -61,7 +60,11 @@
             <ul class="content">
               <li class="content-items">
                 <a class="link" href="">
-                  <img class="img-block" src="./images/portfolio/image1.jpg" width="368" height="294" alt="Технокряк Веб-сайт" />
+                  <div class="content-overlay">
+                    <img class="img-block" src="./images/portfolio/image1.jpg" width="368" height="294" alt="Технокряк Веб-сайт" />
+                    <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
                   <h2 class="title">Технокряк</h2>
                   <p class="type">Веб-сайт</p>
                 </a>
